Mise a jour doc TLS et reorganisation paramètres de config

--- a/mts/src/main/conf/tls.properties
+++ b/mts/src/main/conf/tls.properties
@@ -38,6 +38,33 @@ MESSAGE_TIME_LIFE = 30
 operations.RECEIVE_TIMEOUT = 30
 
 
+#####################################################
+# Certificates configuration                        #
+#####################################################
+
+# Path to the certificates on the SERVER side
+cert.SERVER.DIRECTORY=../conf/certificate/server.jks
+# Password of the certificates and keystores on the SERVER side (empty = no password)
+cert.SERVER.KEYSTORE_PASSWORD=ServerJKS
+cert.SERVER.KEY_PASSWORD=ServerKey
+
+# Path to the certificates on the CLIENT side
+cert.CLIENT.DIRECTORY=../conf/certificate/client.jks
+# Password of the certificates and keystores on the CLIENT side (empty = no password)
+# Used only in the two way mode (cert.TWO_WAY=TRUE)
+cert.CLIENT.KEYSTORE_PASSWORD=ClientJKS
+cert.CLIENT.KEY_PASSWORD=ClientKey
+
+# Flag to activate the SSL Two Way (the client sends a certificate to the server) 
+cert.TWO_WAY=TRUE
+
+# Algorithm used
+cert.ALGORITHM=JKS
+
+# SSL version
+cert.SSL_VERSION=SSLv3
+
+
 #######################################################
 # specific parameters
 #######################################################
@@ -96,28 +123,3 @@ route.RETRANSMISSION_ID =
 # dispatch the response to the scenario with the same name
 # [boolean]
 route.DEFAULT_RESPONSE = true
-
-
-#####################################################
-# Certificates configuration                        #
-#####################################################
-
-# Path to the certificates
-cert.SERVER.DIRECTORY=../conf/certificate/server.jks
-cert.CLIENT.DIRECTORY=../conf/certificate/client.jks
-
-# Password of the certificates and keystores (empty = no password)
-cert.SERVER.KEYSTORE_PASSWORD=ServerJKS
-cert.SERVER.KEY_PASSWORD=ServerKey
-
-cert.CLIENT.KEYSTORE_PASSWORD=ClientJKS
-cert.CLIENT.KEY_PASSWORD=ClientKey
-
-# Algorithm used
-cert.ALGORITHM=JKS
-
-# SSL version
-cert.SSL_VERSION=SSLv3
-
-# SSL Two Way
-cert.TWO_WAY=FALSE
