--- a/trunk/mts/src/main/tutorial/diameter/load/tester.properties
+++ b/trunk/mts/src/main/tutorial/diameter/load/tester.properties
@@ -20,5 +20,7 @@ logs.MAXIMUM_LEVEL = WARN
 #   stack developped by Ericsson
 # (class name)
 # [string] (restart)
+# rotocol.STACK_CLASS_NAME_DIAMETER = com.devoteam.srit.xmlloader.diameter.dk.StackDiameter
+# [string] 
 protocol.STACK_CLASS_NAME_DIAMETER = com.devoteam.srit.xmlloader.diameter.light.StackDiameter
 
