Mettre l'interface (ApplicationID) dans le getProtocol()

--- a/mts/src/main/conf/diameter.properties
+++ b/mts/src/main/conf/diameter.properties
@@ -196,8 +196,10 @@ capability.AUTH_APPLICATION.9 = 16777252
 capability.AUTH_APPLICATION.10 = 16777224
 capability.AUTH_APPLICATION.11 = 16777238
 capability.AUTH_APPLICATION.12 = 16777236
-capability.AUTH_APPLICATION.13 = 1999999999
-#capability.AUTH_APPLICATION.14 = ?
+capability.AUTH_APPLICATION.13 = 16777264
+capability.AUTH_APPLICATION.14 = 1999999999
+capability.AUTH_APPLICATION.15 = 2999999999
+#capability.AUTH_APPLICATION.16 = ?
 
 # Accounting extension capability sets :
 capability.ACCT_APPLICATION.0 = 3
@@ -213,20 +215,23 @@ capability.VENDOR_AUTH_APPLI.3 = 10415,1234
 capability.VENDOR_AUTH_APPLI.4 = 10415,4321
 capability.VENDOR_AUTH_APPLI.5 = 10415,16777216
 capability.VENDOR_AUTH_APPLI.6 = 10415,16777217
-capability.VENDOR_AUTH_APPLI.7 = 10415,16777231
+capability.VENDOR_AUTH_APPLI.7 = 13019,16777231
 capability.VENDOR_AUTH_APPLI.8 = 10415,16777251
 capability.VENDOR_AUTH_APPLI.9 = 10415,16777252
 capability.VENDOR_AUTH_APPLI.10 = 10415,16777224
 capability.VENDOR_AUTH_APPLI.11 = 10415,16777238
 capability.VENDOR_AUTH_APPLI.12 = 10415,16777236
 capability.VENDOR_AUTH_APPLI.13 = 13019,16777231
-capability.VENDOR_AUTH_APPLI.14 = 999999999,1999999999
-#capability.VENDOR_AUTH_APPLI.15 = ?,?
+capability.VENDOR_AUTH_APPLI.14 = 10415,16777264
+capability.VENDOR_AUTH_APPLI.15 = 999999999,1999999999
+capability.VENDOR_AUTH_APPLI.16 = 999999999,2999999999
+#capability.VENDOR_AUTH_APPLI.17 = ?,?
 
 # Vendor-specific accounting extension capability sets :
 # type (vendor_id,application_id)
-#capability.VENDOR_ACCT_APPLI.0 = ?,?
-
+capability.VENDOR_ACCT_APPLI.0 = 999999999,1999999999
+capability.VENDOR_ACCT_APPLI.1 = 999999999,2999999999
+#capability.VENDOR_ACCT_APPLI.2 = ?,?
 
 #######################################################
 # Dictionary
