--- a/trunk/mts/pom.xml
+++ b/trunk/mts/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>myGroupId</groupId>
     <artifactId>mts</artifactId>
-    <version>6.2.0_beta</version>
+    <version>6.2.1_beta</version>
     <packaging>jar</packaging>
 
     <name>mts</name>
@@ -109,7 +109,7 @@
                                         <include>doc/**</include>
                                         <include>functions/**</include>
                                         <include>lib/**</include>
-                                        <include>logs/**</include>
+                                        <include>logs</include>
                                         <include>tutorial/**</include>
                                     </includes>
                                     <excludes>
