--- a/mts/pom.xml
+++ b/mts/pom.xml
@@ -430,5 +430,12 @@
             <scope>system</scope> 
             <systemPath>${basedir}/src/main/lib/BN_classes_tcap.jar</systemPath>   
         </dependency>
+        <dependency>
+            <groupId>com.devoteam.srit.xmlloader.sigtran.ap.generated.cap</groupId>
+          <artifactId>BN_classes_cap</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope> 
+            <systemPath>${basedir}/src/main/lib/BN_classes_cap.jar</systemPath>   
+        </dependency>
     </dependencies>
 </project>
