Elever chemin en dur

--- a/mts/.classpath
+++ b/mts/.classpath
@@ -18,12 +18,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="src/main/tutorial/core/076_parameters_pluggable/HelloWorldPluggableComponent.jar"/>
-	<classpathentry kind="lib" path="C:/svnMTS/trunk/mts/lib/tcap-api-2.1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/svnMTS/trunk/mts/lib/tcap-impl-2.1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/svnMTS/trunk/mts/lib/asn-2.0.2.FINAL.jar"/>
-	<classpathentry kind="lib" path="C:/svnMTS/trunk/mts/lib/binarynotes.jar"/>
-	<classpathentry kind="lib" path="C:/svnMTS/trunk/mts/lib/map-api-2.1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/svnMTS/trunk/mts/lib/map-impl-2.1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/jcharset-SMS.jar"/>
 	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
 		<attributes>
@@ -36,5 +30,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/asn-2.0.2.FINAL.jar"/>
+	<classpathentry kind="lib" path="lib/binarynotes.jar"/>
+	<classpathentry kind="lib" path="lib/map-api-2.1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/map-impl-2.1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/tcap-api-2.1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/tcap-impl-2.1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
