Ajouter paramètre config core.CHARSET_ENCODING mais ne pas prendre en compte car ne marche pas bien

--- a/mts/src/main/conf/tester.properties
+++ b/mts/src/main/conf/tester.properties
@@ -243,6 +243,12 @@ operations.CSV_ESCAPE_CHAR = "
 # [integer] (restart)
 core.NUMBER_THREADS_POOL = 0
 
+# Default char set for string encoding; for <parameter> operation like 
+# "string.toBinary" or "binary.toString" you can if needed specified a different charset.
+# Notes : if you change it, you should quit the application to take the new value into account
+# [String] (restart)
+#core.CHARSET_ENCODING = ISO-8859-15
+# delete because it does not work properly : we let it on the argument of the process
 
 ###############################################################################
 #                                                                             #
