--- a/mts/pom.xml
+++ b/mts/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>myGroupId</groupId>
-    <artifactId>mts</artifactId>
+    <artifactId>mts-ericsson</artifactId>
     <version>6.2.2_beta</version>
     <packaging>jar</packaging>
 
-    <name>mts</name>
+    <name>mts-ericsson</name>
     
     <url>http://maven.apache.org</url>
         
