--- a/trunk/mts/pom.xml
+++ b/trunk/mts/pom.xml
@@ -437,5 +437,23 @@
             <scope>system</scope> 
             <systemPath>${basedir}/src/main/lib/BN_classes_cap.jar</systemPath>   
         </dependency>
+        
+        <!-- library for JSON parser-->
+        <dependency>
+             <groupId>com.jayway.jsonpath</groupId>
+             <artifactId>json-path</artifactId>
+             <version>2.1.0</version>
+        </dependency>
+        <dependency>
+             <groupId>com.jayway.jsonpath</groupId>
+             <artifactId>json-path-assert</artifactId>
+             <version>2.1.0</version>
+             <scope>test</scope>
+        </dependency>
+        <dependency>
+             <groupId>org.slf4j</groupId>
+             <artifactId>slf4j-simple</artifactId>
+             <version>1.7.12</version>
+        </dependency>   
     </dependencies>
 </project>
