--- a/mts/src/main/tutorial/diameter/diameter.properties
+++ b/mts/src/main/tutorial/diameter/diameter.properties
@@ -1,3 +1,7 @@
+# Flag to listen to TLS transport
+# [boolean] 
+listenpoint.LISTEN_TLS = true
+
 # This parameter defines the path for diameter dictionary. 
 # This path is now relative to the directory where your test 
 # file is located (since 6.1.0 version of MTS). But you can 
