--- a/trunk/mts/src/main/tutorial/imap/load/imap.properties
+++ b/trunk/mts/src/main/tutorial/imap/load/imap.properties
@@ -1,7 +1,13 @@
+# Flag to listen to TLS transport
+# [boolean] 
+listenpoint.LISTEN_TLS = false
+
 # The tool routes a received request to the scenario given by its name. In this case, the tool is 
 # simulating a pure server.
 # This parameter is used to get the scenario name as mentioned in the test file from the message 
 # given a list of paths (separated by ',' character). The path are defined with the setFromMessage 
 # operation and are of course protocol dependant
-# [string]
+# type list<string> (list of path keywords)
+# [string] 
 route.SCENARIO_NAME = channel.localport
+
