--- a/mts/src/main/tutorial/coap/tester.properties
+++ b/mts/src/main/tutorial/coap/tester.properties
@@ -7,3 +7,9 @@
 # [enumeration] ERROR|WARN|INFO|DEBUG 
 logs.MAXIMUM_LEVEL = DEBUG
 
+# Maximum length (in characters) when we log a string
+# Reduce the volume to store the logs and CPU to write them
+# Notes : if you change it, you should quit the application to take the new value into account
+# [integer] 
+logs.MAX_STRING_LENGTH = 3000
+
