Nouveau pom.xml de JC Le Rouzic (manque la librairie Mobicents SIGTRAN/TCAP)

--- a/mts/pom.xml
+++ b/mts/pom.xml
@@ -346,6 +346,11 @@
             <systemPath>${basedir}/lib/jpcap.jar</systemPath>   
         </dependency>
         <dependency>
+            <groupId>org.mobicents.protocols.ss7.tcap</groupId>
+            <artifactId>tcap-impl</artifactId>
+            <version>3.0.1337</version>
+        </dependency>        
+        <dependency>
             <groupId>binarynotes</groupId>
             <artifactId>binarynotes</artifactId>
             <version>0.1</version>
