--- a/trunk/mts/src/main/conf/sip.properties
+++ b/trunk/mts/src/main/conf/sip.properties
@@ -57,8 +57,8 @@ listenpoint.TRANSPORT = udp
 # If the parameter is set to "True", then the IMSLoader SIP stack automatically adds a CRLF characters 
 # at the end of the Content block if present only.
 # This parameter is useful with NSN SIP equipments (specially IMS RPF2 ones)
-# [boolean]
-nsn.ADD_CRLF_CONTENT = true
+# [integer]
+nsn.ADD_CRLF_CONTENT = 1
 
 # Sets the outbound proxy of the SIP Stack. The format for this string is "ipaddress:port/transport" 
 # i.e. 129.1.22.333:5060/UDP. This property is optional. 
