--- a/trunk/mts/src/main/tutorial/sip/sip.properties
+++ b/trunk/mts/src/main/tutorial/sip/sip.properties
@@ -17,8 +17,8 @@ listenpoint.LISTEN_TLS = true
 # If the parameter is set to "True", then the IMSLoader SIP stack automatically adds a CRLF characters 
 # at the end of the Content block if present only.
 # This parameter is useful with NSN SIP equipments (specially IMS RPF2 ones)
-# [boolean] 
-nsn.ADD_CRLF_CONTENT = false
+# [integer] 
+nsn.ADD_CRLF_CONTENT = 3
 
 # Flag to activate the automatic retransmission sending for messages
 # if true then a retransmission messages are sent
