--- a/trunk/mts/pom.xml
+++ b/trunk/mts/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>myGroupId</groupId>
     <artifactId>mts-ericsson</artifactId>
-    <version>6.2.2</version>
+    <version>6.3.0_beta</version>
     <packaging>jar</packaging>
 
     <name>mts-ericsson</name>
