Prendre en compte les paramètres de config sur les channels pour les proto applicatifs comme SIGTRAN

--- a/mts/pom.xml
+++ b/mts/pom.xml
@@ -332,9 +332,9 @@
             <systemPath>${basedir}/lib/gp-net-radius-1.6.jar</systemPath>   
         </dependency>
         <dependency>
-            <groupId>JavaSCTP-0-5-7</groupId>
-            <artifactId>JavaSCTP-0-5-7</artifactId>
-            <version>0.5.7</version>
+            <groupId>JavaSCTP</groupId>
+            <artifactId>JavaSCTP</artifactId>
+            <version>0.5.8</version>
             <scope>system</scope> 
             <systemPath>${basedir}/lib/JavaSCTP-0-5-8.jar</systemPath>   
         </dependency>
