--- a/mts/pom.xml
+++ b/mts/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>myGroupId</groupId>
     <artifactId>mts-ericsson</artifactId>
-    <version>6.3.1_beta</version>
+    <version>6.4.0_beta</version>
     <packaging>jar</packaging>
 
     <name>mts-ericsson</name>
@@ -25,8 +25,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -459,6 +459,31 @@
              <groupId>org.slf4j</groupId>
              <artifactId>slf4j-simple</artifactId>
              <version>1.7.12</version>
-        </dependency>   
+        </dependency>
+        
+         <!-- annotations from the Checker Framework: nullness, interning, locking, ... -->
+        <dependency>
+            <groupId>org.checkerframework</groupId>
+            <artifactId>checker-qual</artifactId>
+            <version>2.1.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.checkerframework</groupId>
+            <artifactId>checker</artifactId>
+            <version>2.1.8</version>
+        </dependency>
+        <!-- The type annotations compiler - uncomment if desired -->
+        <!-- <dependency>
+            <groupId>org.checkerframework</groupId>
+            <artifactId>compiler</artifactId>
+            <version>2.1.8</version>
+        </dependency> -->
+        <!-- The annotated JDK to use (change to jdk7 if using Java 7) -->
+        <dependency>
+            <groupId>org.checkerframework</groupId>
+            <artifactId>jdk8</artifactId>
+            <version>2.1.8</version>
+        </dependency>
+        
     </dependencies>
 </project>
