--- a/trunk/mts/src/main/conf/tester.properties
+++ b/trunk/mts/src/main/conf/tester.properties
@@ -282,6 +282,14 @@ protocol.STACK_CLASS_NAME_RTP = com.devoteam.srit.xmlloader.rtp.StackRtp
 #protocol.STACK_CLASS_NAME_DIAMETER = com.devoteam.srit.xmlloader.diameter.dk.StackDiameter
 protocol.STACK_CLASS_NAME_DIAMETER = com.devoteam.srit.xmlloader.diameter.light.StackDiameter
 
+# Class name for the stack protocol for SCTP protocol
+# = com.devoteam.srit.xmlloader.sctp.lksctp.StackLksctp for linux kernel stack
+# = com.devoteam.srit.xmlloader.sctp.nio.StackNio for jdk nio sctp stack 
+# (class name)
+# [string] (restart)
+#protocol.STACK_CLASS_NAME_SCTP = com.devoteam.srit.xmlloader.sctp.lksctp.StackLksctp
+protocol.STACK_CLASS_NAME_SCTP = com.devoteam.srit.xmlloader.sctp.sunnio.StackSunNioSctp
+
 ###############################################################################
 #                                                                             #
 # gui                                                                         #
@@ -294,3 +302,4 @@ protocol.STACK_CLASS_NAME_DIAMETER = com.devoteam.srit.xmlloader.diameter.light.
 # [string]
 gui.EDITOR_PATH = "$EDITOR_PATH"
 #gui.EDITOR_PATH = "C:\Program Files (x86)\PSPad editor\PSPad.exe"
+#gui.EDITOR_PATH = "gvim"
