--- a/trunk/mts/pom.xml
+++ b/trunk/mts/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.ericsson.mts</groupId>
     <artifactId>mts</artifactId>
-    <version>6.4.1</version>
+    <version>6.4.1_beta</version>
     <packaging>jar</packaging>
 
     <name>mts-ericsson</name>
