Correction Fabrice Sartelet : couche AP par défault pour décodage couche AP : MAP ou CAP

--- a/mts/src/main/conf/sigtran.properties
+++ b/mts/src/main/conf/sigtran.properties
@@ -76,6 +76,15 @@ server.DEFAULT_PPID = 3
 # [boolean] true|false
 map.DECODE_SMS_COMMAND = false
 
+#######################################################
+
+# Define the path of the dictionary to use to decode the AP layer message 
+# in the case there is no "application-context-name" parameter in the TCAP layer
+# (DialogXXXX object).
+# The path is relatif to the <install_dir>/conf/sigtran/ directory.  
+# [string] map/dictionary_MAP.xml|cap/dictionary_CAP.xml| ...
+# default map/dictionary_MAP.xml 
+ap.DEFAULT_AP_DICTIONARY = map/dictionary_MAP.xml
 
 #######################################################
 
