--- a/mts/.classpath
+++ b/mts/.classpath
@@ -32,5 +32,8 @@
 	<classpathentry kind="lib" path="lib/map-impl-2.1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/tcap-api-2.1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/tcap-impl-2.1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="src/main/lib/BN_classes_cap.jar"/>
+	<classpathentry kind="lib" path="src/main/lib/BN_classes_map.jar"/>
+	<classpathentry kind="lib" path="src/main/lib/BN_classes_tcap.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
