--- a/trunk/mts/src/main/tutorial/sip/sip.properties
+++ b/trunk/mts/src/main/tutorial/sip/sip.properties
@@ -20,6 +20,12 @@ listenpoint.LISTEN_TLS = true
 # [integer] 
 nsn.ADD_CRLF_CONTENT = 3
 
+# Set the list of Content-Type value which correspond to binary data. In that case the Content-Type of the 
+# the message is present in the following list then the content of the message is not changed at all by MTS 
+# before sending the message or receiving it (no CRLF replacement, no blank deletion)
+# [list[string] 
+content.BINARY_TYPES = application/vnd.3gpp.sms,application/ISUP,application/isup;base\=itu-t92+;version\=spirou,multipart/mixed; boundary\=unique-boundary-1
+
 # Flag to activate the automatic retransmission sending for messages
 # if true then a retransmission messages are sent
 # [boolean] 
