--- a/trunk/mts/src/main/doc/tools/build.xml
+++ b/trunk/mts/src/main/doc/tools/build.xml
@@ -1,7 +1,7 @@
 <project name="IMSLoader" basedir=".">
 
-    <property name="conf.schemas" value="../conf/schemas"/>
-    <property name="doc.schemas" value="../doc/schemas"/>
+    <property name="conf.schemas" value="../../conf/schemas"/>
+    <property name="doc.schemas" value="../../doc/schemas"/>
 
     <target name="clean" description="clean ">
         <delete dir="${doc.schemas}"/>
