--- a/trunk/mts/src/main/conf/sip.properties
+++ b/trunk/mts/src/main/conf/sip.properties
@@ -54,9 +54,10 @@ listenpoint.TRANSPORT = udp
 
 #######################################################
 
-# If the parameter is set to "True", then the IMSLoader SIP stack automatically adds a CRLF characters 
-# at the end of the Content block if present only.
-# This parameter is useful with NSN SIP equipments (specially IMS RPF2 ones)
+# The MTS application automatically is able to add a given number of CRLF characters 
+# at the end of the Content block if present; this number is specified with the 
+# following parameter
+# This feature is useful with NSN SIP equipments (specially IMS RPF2 ones)
 # [integer]
 nsn.ADD_CRLF_CONTENT = 1
 
