--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.ericsson.mts</groupId>
     <artifactId>mts</artifactId>
-    <version>6.4.3-SNAPSHOT</version>
+    <version>SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <url>http://mts.arm-tool.com</url>
