--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ branches:
     only:
         - master
 script:
-    - mvn version:set -DnewVersion=$TRAVIS_BRANCH
+    - mvn versions:set -DnewVersion=$TRAVIS_BRANCH
     - mvn install
 deploy:
     provider: releases
