--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,7 @@
                         </goals>
                         <configuration>
                             <izpackBasedir>${target.izpack.dir}</izpackBasedir>
+                            <installerFile>target/${project.build.finalName}-installer.jar</installerFile>
                         </configuration>
                     </execution>
                 </executions>
