- cleaned up and updated jain sip dependencies (and fixed lot of  issues)  - fixed XMLTree that issue was causing incoherent logs  - minor cleanups

--- a/pom.xml
+++ b/pom.xml
@@ -302,12 +302,12 @@
         <dependency>
             <groupId>javax.sip</groupId>
             <artifactId>jain-sip-api</artifactId>
-            <version>1.2</version>
+            <version>1.2.1.4</version>
         </dependency>
         <dependency>
             <groupId>javax.sip</groupId>
             <artifactId>jain-sip-ri</artifactId>
-            <version>1.2</version>
+            <version>1.3.0-32</version>
         </dependency>
         <dependency>
             <groupId>jfree</groupId>
@@ -348,11 +348,6 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.sdp</groupId>
-            <artifactId>nist-sdp</artifactId>
-            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>org.mobicents.protocols.ss7.tcap</groupId>
