fixed the doc generation and largely improved the performances

--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,7 @@
                 <executions>
                     <execution>
                         <id>scenario</id>
-                        <phase>install</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>java</goal>
                         </goals>
@@ -243,7 +243,7 @@
                     </execution>
                     <execution>
                         <id>master</id>
-                        <phase>install</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>java</goal>
                         </goals>
@@ -256,7 +256,7 @@
                     </execution>
                     <execution>
                         <id>test</id>
-                        <phase>install</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>java</goal>
                         </goals>
@@ -269,7 +269,7 @@
                     </execution>
                     <execution>
                         <id>parameter_operation</id>
-                        <phase>install</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>java</goal>
                         </goals>
@@ -277,6 +277,32 @@
                             <arguments>
                                 <argument>src/main/conf/schemas/parameter_operation.xsd</argument>
                                 <argument>target/mts/doc/schemas/parameter_operation.html</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>test_condition</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>
+                                <argument>src/main/conf/schemas/test_condition.xsd</argument>
+                                <argument>target/mts/doc/schemas/test_condition.html</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>scenario_protocol</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>
+                                <argument>src/main/conf/schemas/scenario_protocol.xsd</argument>
+                                <argument>target/mts/doc/schemas/scenario_protocol.html</argument>
                             </arguments>
                         </configuration>
                     </execution>
