--- a/pom.xml
+++ b/pom.xml
@@ -352,10 +352,15 @@
             <version>2.1.0</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpcore</artifactId>
-            <version>4.1.4</version>
-        </dependency>
+      		<groupId>org.apache.httpcomponents.core5</groupId>
+      		<artifactId>httpcore5</artifactId>
+      		<version>5.0-beta2</version>
+    	</dependency>
+        <dependency>
+      		<groupId>org.apache.httpcomponents.core5</groupId>
+      		<artifactId>httpcore5-h2</artifactId>
+      		<version>5.0-beta2</version>
+    	</dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
