lot of modifications

--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/main/lib/BN_classes_S1AP.jar"/>
+	<classpathentry kind="lib" path="src/main/lib/BN_classes_cap.jar"/>
+	<classpathentry kind="lib" path="src/main/lib/BN_classes_map.jar"/>
+	<classpathentry kind="lib" path="src/main/lib/BN_classes_tcap.jar"/>
+	<classpathentry kind="lib" path="src/main/tutorial/core/076_parameters_pluggable/HelloWorldPluggableComponent.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
