--- a/pom.xml
+++ b/pom.xml
@@ -433,27 +433,27 @@
         </dependency>
         
         <!-- DEPENDENCIES THAT ARE NOT IN PUBLIC REPOS -->        
-        <dependency>
+        <!--dependency>
             <groupId>com.devoteam.srit.xmlloader.sigtran.ap.generated.map</groupId>
             <artifactId>BN_classes_map</artifactId>
             <version>1.0.0</version>
             <scope>system</scope> 
             <systemPath>${basedir}/src/main/lib/BN_classes_map.jar</systemPath>   
-        </dependency>
-        <dependency>
+        </dependency-->
+        <!--dependency>
             <groupId>com.devoteam.srit.xmlloader.sigtran.ap.generated.tcap</groupId>
             <artifactId>BN_classes_tcap</artifactId>
             <version>1.0.0</version>
             <scope>system</scope> 
             <systemPath>${basedir}/src/main/lib/BN_classes_tcap.jar</systemPath>   
-        </dependency>
-        <dependency>
+        </dependency-->
+        <!--dependency>
             <groupId>com.devoteam.srit.xmlloader.sigtran.ap.generated.cap</groupId>
             <artifactId>BN_classes_cap</artifactId>
             <version>1.0.0</version>
             <scope>system</scope> 
             <systemPath>${basedir}/src/main/lib/BN_classes_cap.jar</systemPath>   
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>mibble-parser</groupId>
             <artifactId>mibble-parser</artifactId>
