first scenario http2 client-server

--- a/src/main/conf/http2.properties
+++ b/src/main/conf/http2.properties
@@ -33,7 +33,7 @@ listenpoint.LOCAL_PORT_TLS = 4430,4431
 
 # Flag to listen to UDP transport
 # [boolean]
-listenpoint.LISTEN_UDP = true
+listenpoint.LISTEN_UDP = false
 
 # Flag to listen to TCP transport
 # [boolean]
@@ -56,7 +56,7 @@ listenpoint.TRANSPORT = tcp
 #####################################################
 
 # Default protocol to use if not specified into the server attribute
-# Possible values : http, https
+# Possible values : http2, https
 client.DEFAULT_PROTOCOL=HTTP2
 
 # Default Http client port
