add post body, https, test scenario

--- a/src/main/conf/http2.properties
+++ b/src/main/conf/http2.properties
@@ -31,33 +31,13 @@ listenpoint.LOCAL_PORT = 8080,8081
 listenpoint.LOCAL_PORT_TLS = 4430,4431
 
 
-# Flag to listen to UDP transport
-# [boolean]
-listenpoint.LISTEN_UDP = false
-
-# Flag to listen to TCP transport
-# [boolean]
-listenpoint.LISTEN_TCP = true
-
-# Flag to listen to SCTP transport
-# [boolean]
-listenpoint.LISTEN_SCTP = false
-
-# Flag to listen to TLS transport
-# [boolean]
-listenpoint.LISTEN_TLS = true
-
-# Default transport for endpoints; possible values are : udp, tcp, tls, sctp
-# [enumeration] udp|tcp|sctp|tls
-listenpoint.TRANSPORT = tcp
-
 #####################################################
 # client                                            #
 #####################################################
 
 # Default protocol to use if not specified into the server attribute
-# Possible values : http2, https
-client.DEFAULT_PROTOCOL=HTTP2
+# Possible values : http, https
+client.DEFAULT_PROTOCOL=HTTP
 
 # Default Http client port
 client.DEFAULT_HTTP_PORT=8000
@@ -65,6 +45,13 @@ client.DEFAULT_HTTP_PORT=8000
 # Default Https client port
 client.DEFAULT_HTTPS_PORT=4430
 
+#####################################################
+# IOReactor                                         #
+#####################################################
+
+# Default timeout (in seconds) to use for created socket
+# [int]
+SOCKET_TIMEOUT=60
 
 #####################################################
 # Common settings                                   #
