Supprimer transID en dur 890001ff

--- a/src/main/tutorial/sigtran/m3ua/CAP/tester.properties
+++ b/src/main/tutorial/sigtran/m3ua/CAP/tester.properties
@@ -12,7 +12,7 @@ runprofile.DURATION = 360000
 # 2 = INFO
 # 3 = DEBUG
 # [enumeration] ERROR|WARN|INFO|DEBUG 
-logs.MAXIMUM_LEVEL = ERROR
+logs.MAXIMUM_LEVEL = DEBUG
 
 # Storage location for logs
 # Indicate whether we write logs and where we store it
