Specify jdk on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: java
+jdk:
+    - oraclejdk8
+    - openjdk8
 install:
     - mvn versions:set -DnewVersion=$TRAVIS_BRANCH
     - mvn install
