--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 
         <target.izpack.dir>${project.build.directory}/izpack</target.izpack.dir>
         <izpack.version>4.3.5</izpack.version>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
 
         <!--
         <sonar.host.url>defined in ~/.m2/settings.xml</sonar.host.url>
