fix default config

--- a/src/main/tutorial/s1ap/s1ap.properties
+++ b/src/main/tutorial/s1ap/s1ap.properties
@@ -21,7 +21,7 @@ listenpoint.TRANSPORT = sctp
 
 # Default S1AP server address to send the request to
 # [string] 
-DEFAULT_SERVER_URL = s1ap://10.0.2.15:3873
+DEFAULT_SERVER_URL = s1ap://localhost:3873
 
 # transport for S1AP protocol (client mode)
 # BE CAREFUL : SCTP is supported only on LINUX platform
