Travis : specify distribution

--- a/src/main/tutorial/s1ap/s1ap.properties
+++ b/src/main/tutorial/s1ap/s1ap.properties
@@ -25,6 +25,6 @@ DEFAULT_SERVER_URL = s1ap://localhost:3873
 
 # transport for S1AP protocol (client mode)
 # BE CAREFUL : SCTP is supported only on LINUX platform
-# [enumeration] TCP|SCTP 
+# [enumeration] SCTP
 DEFAULT_TRANSPORT = SCTP
 
