now use publicly release asn1 and radius libs

--- a/pom.xml
+++ b/pom.xml
@@ -465,7 +465,17 @@
             <artifactId>groovy-all</artifactId>
             <version>2.4.7</version>
         </dependency>
-        
+       <dependency>
+            <groupId>com.github.gege-fr</groupId>
+            <artifactId>gege-fr-radius</artifactId>
+            <version>1.0.11</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.ericsson-mts</groupId>
+            <artifactId>mts-asn1-per</artifactId>
+            <version>0.0.4</version>
+        </dependency>
+                
         <!-- DEPENDENCIES THAT ARE NOT IN PUBLIC REPOS -->        
         <dependency>
             <groupId>com.devoteam.srit.xmlloader.sigtran.ap.generated.map</groupId>
@@ -517,20 +527,6 @@
             <systemPath>${basedir}/lib/pcmext.jar</systemPath>   
         </dependency>    
         <dependency>
-            <groupId>gp-utils</groupId>
-            <artifactId>gp-utils</artifactId>
-            <version>1.15</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/gp-utils-1.15.jar</systemPath>   
-        </dependency>
-        <dependency>
-            <groupId>gp-net-radius</groupId>
-            <artifactId>gp-net-radius</artifactId>
-            <version>1.6</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/gp-net-radius-1.6.jar</systemPath>   
-        </dependency>
-        <dependency>
             <groupId>JavaSCTP</groupId>
             <artifactId>JavaSCTP</artifactId>
             <version>0.5.8</version>
@@ -543,13 +539,6 @@
             <version>0.7</version>
             <scope>system</scope> 
             <systemPath>${basedir}/lib/jpcap.jar</systemPath>   
-        </dependency>
-        <dependency>
-            <groupId>mts-asn1-per</groupId>
-            <artifactId>mts-asn1-per</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/mts-asn1-per-1.0-SNAPSHOT-jar-with-dependencies.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
