update mts-asn1 version and set decoders to permissive

--- a/pom.xml
+++ b/pom.xml
@@ -466,7 +466,12 @@
         <dependency>
             <groupId>io.github.ericsson-mts</groupId>
             <artifactId>mts-asn1-per</artifactId>
-            <version>0.0.4</version>
+            <version>0.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.ericsson-mts</groupId>
+            <artifactId>mts-asn1-xml</artifactId>
+            <version>0.0.5</version>
         </dependency>
                 
         <!-- DEPENDENCIES THAT ARE NOT IN PUBLIC REPOS -->        
