add http2 client parameters and automatically transform Host header to :authority

--- a/src/main/conf/http2.properties
+++ b/src/main/conf/http2.properties
@@ -45,6 +45,12 @@ client.DEFAULT_HTTP_PORT=8000
 # Default Https client port
 client.DEFAULT_HTTPS_PORT=4430
 
+# Initial http2 windows size
+client.INITIAL_WINDOW_SIZE=1073741824
+
+# Maximum number of concurrent streams
+client.MAX_CONCURRENT_STREAMS=100
+
 #####################################################
 # IOReactor                                         #
 #####################################################
@@ -125,3 +131,6 @@ route.RETRANSMISSION_ID =
 # dispatch the response to the scenario with the same name
 # [boolean]
 route.DEFAULT_RESPONSE = true
+
+
+
