add new library for protocol NAS-5GS

--- a/src/main/resources/nas/grammar/5gs/dictionary5GSCommonInformationElements.yaml
+++ b/src/main/resources/nas/grammar/5gs/dictionary5GSCommonInformationElements.yaml
@@ -67,6 +67,22 @@ elements:
           102: "Notification response"
           103: "UL NAS transport"
           104: "DL NAS transport"
+          193: "PDU session establishment request"
+          194: "PDU session establishment accept"
+          195: "PDU session establishment reject"
+          197: "PDU session authentication command"
+          198: "PDU session authentication complete"
+          199: "PDU session authentication result"
+          201: "PDU session modification request"
+          202: "PDU session modification reject"
+          203: "PDU session modification command"
+          204: "PDU session modification complete"
+          205: "PDU session modification command reject"
+          209: "PDU session release request"
+          210: "PDU session release reject"
+          211: "PDU session release command"
+          212: "PDU session release complete"
+          214: "5GSM status"
   - name: "Spare half octet header"
     pdu:
       - "@type": "SPARE"
