--- a/src/main/resources/nas/grammar/5gs/dictionary5GSCommonMessages.yaml
+++ b/src/main/resources/nas/grammar/5gs/dictionary5GSCommonMessages.yaml
@@ -8,6 +8,14 @@ messages:
         length: 4
       - type: "Security header type"
         length: -1
+    additionnal:
+      - type: "Extended protocol discriminator"
+        length: 8
+      - type: "Spare half octet"
+        name: "Spare half octet"
+        length: 4
+      - type: "Security header type"
+        length: -1
 #      - type: "Spare half octet"
 #        name: "Spare half octet"
 #        length: 4
