--- a/src/main/resources/nas/grammar/5gs/dictionnary5GSMobilityManagementMessages.yaml
+++ b/src/main/resources/nas/grammar/5gs/dictionnary5GSMobilityManagementMessages.yaml
@@ -1,4 +1,5 @@
 messages:
+#-------------------- header type --------------------------------------
   - name: "Plain 5GS NAS message not security protected"
     mandatory:
       - type: "Message type"
@@ -10,6 +11,16 @@ messages:
       - type: "Sequence number"
         name: "Sequence number"
         length: 8
+  - name : "Integrity protected and ciphered"
+    mandatory:
+      - type: "Message authentication code"
+        length: 32
+      - type: "Sequence number"
+        name: "Sequence number"
+        length: 8
+
+#----------------------- request type ---------------------------------
+
   - name: "Registration request"
     mandatory:
       - type: "5GS registration type"
@@ -54,11 +65,11 @@ messages:
       - name: "Selected NAS security algorithms"
         type: "NAS security algorithms"
         length: 8
-      - name: "ngKSI"
-        type: "NAS key set identifier"
-        length: 4
       - name: "Spare half octet"
         type: "Spare half octet"
+        length: 4
+      - name: "ngKSI"
+        type: "NAS key set identifier"
         length: 4
       - name: "Replayed UE security capabilities"
         type: "UE security capability"
@@ -70,4 +81,16 @@ messages:
       2C:
         type: "5GS mobile identity"
         name: "5G-GUTI"
+
+  - name: "Deregistration request"
+    mandatory:
+      - type: "Spare half octet 3"
+        length: 4
+      - type: "deregistration type"
+        length: 4
+      - type: "5GS mobile identity"
+
+
+
+
 
