--- a/pom.xml
+++ b/pom.xml
@@ -471,7 +471,12 @@
         <dependency>
             <groupId>io.github.ericsson-mts</groupId>
             <artifactId>mts-asn1-xml</artifactId>
-            <version>0.0.5</version>
+            <version>0.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.ericsson-mts</groupId>
+            <artifactId>mts-nas</artifactId>
+            <version>0.0.3</version>
         </dependency>
                 
         <!-- DEPENDENCIES THAT ARE NOT IN PUBLIC REPOS -->        
@@ -537,6 +542,11 @@
             <version>0.7</version>
             <scope>system</scope> 
             <systemPath>${basedir}/lib/jpcap.jar</systemPath>   
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
         </dependency>
     </dependencies>
 </project>
