add new grammar for NAS 15.2.0

--- a/src/main/resources/nas/grammar/5gs/NAS-5GS-152/dictionary5GSCommonMessages.yaml
+++ b/src/main/resources/nas/grammar/5gs/NAS-5GS-152/dictionary5GSCommonMessages.yaml
@@ -8,6 +8,7 @@ messages:
         length: 4
       - type: "Security header type"
         length: -1
+#   For the Plain NAS 5G message when Security protected NAS 5GS message is present before
     additionnal:
       - type: "Extended protocol discriminator"
         length: 8
@@ -16,9 +17,5 @@ messages:
         length: 4
       - type: "Security header type"
         length: -1
-#      - type: "Spare half octet"
-#        name: "Spare half octet"
-#        length: 4
-#      - type: "Message type"
-#        length: -1
+
 
